--- a/src/styles/keditor/_button.less
+++ b/src/styles/keditor/_button.less
@@ -29,9 +29,10 @@
     background: none;
     height: @btn-height;
     line-height: unit(@btn-height - 1, px);
-    font-size: @btn-font-size;
-    padding: @btn-padding;
-    border-radius: @border-radius;
+    font-size: 40px;
+    padding: 18px;
+    padding-bottom: 36px;
+    border-radius: 12px;
     box-shadow: @btn-box-shadow;
     display: inline-block;
     text-decoration: none !important;
