--- a/src/styles/keditor/_button.less
+++ b/src/styles/keditor/_button.less
@@ -29,9 +29,11 @@
     background: none;
     height: @btn-height;
     line-height: unit(@btn-height - 1, px);
-    font-size: 40px;
-    padding: 18px;
-    padding-bottom: 36px;
+    font-size: 30px;
+    padding-top: 14px;
+    padding-bottom: 32px;
+    padding-left: 60px;
+    padding-right: 60px;
     border-radius: 12px;
     box-shadow: @btn-box-shadow;
     display: inline-block;
