--- a/src/styles/keditor/_button.less
+++ b/src/styles/keditor/_button.less
@@ -30,6 +30,7 @@
     height: @btn-height;
     line-height: unit(@btn-height - 1, px);
     font-size: 30px;
+    color: #FFCE80;
     padding-top: 14px;
     padding-bottom: 32px;
     padding-left: 60px;
@@ -62,7 +63,7 @@
     &.keditor-btn-primary {
         border: 1px solid @btn-primary-border;
         background: @btn-primary-bg;
-        color: @btn-primary-color;
+        color: #FFCE80;
         
         &:hover {
             background: darken(@btn-primary-bg, 5%);
