--- a/src/styles/keditor/_topbar.less
+++ b/src/styles/keditor/_topbar.less
@@ -17,7 +17,7 @@
 }
 
 .keditor-topbar-title {
-    color: @topbar-title-color;
+    color: #FFCE80;
     line-height: @topbar-height;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -40,21 +40,24 @@
 .keditor-topbar-left,
 .keditor-topbar-right {
     width: ~"calc(50% - 100px)";
+    background-color: #000000;
 }
 
 .keditor-topbar-right {
     text-align: right;
+    background-color: #000000;
 }
 
 .keditor-topbar-center {
     width: 200px;
     text-align: center;
+    background-color: #000000;
 }
 
 .keditor-topbar-btn {
     height: @topbar-height;
     line-height: @topbar-height;
-    color: @topbar-btn-color !important;
+    color: #FFCE80 !important;
     text-decoration: none;
     width: @topbar-height;
     text-align: center;
