--- a/src/styles/keditor/_ui.less
+++ b/src/styles/keditor/_ui.less
@@ -16,5 +16,9 @@
     &:before,
     &:after {
         box-sizing: border-box;
+        border-radius: 10px;
+        box-sizing: border-box;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
     }
 }
