--- a/src/styles/keditor/_topbar.less
+++ b/src/styles/keditor/_topbar.less
@@ -13,7 +13,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    background: @topbar-bg;
+    background: #000;
 }
 
 .keditor-topbar-title {
@@ -41,22 +41,17 @@
 .keditor-topbar-right {
     width: ~"calc(50% - 100px)";
     background-color: #000000;
-    border-radius: 0px;
-    border-top-left-radius: 0px;
 }
 
 .keditor-topbar-right {
     text-align: right;
     background-color: #000000;
-    border-radius: 0px;
-    border-top-right-radius: 0px;
 }
 
 .keditor-topbar-center {
     width: 200px;
     text-align: center;
     background-color: #000000;
-    border-radius: 0px;
 }
 
 .keditor-topbar-btn {
