--- a/src/styles/keditor/_snippet.less
+++ b/src/styles/keditor/_snippet.less
@@ -31,6 +31,7 @@
     width: @snippet-width;
     margin: @snippet-margin;
     flex: none;
+    border-color: black;
     
     .keditor-snippet-inner {
         display: block;
