--- a/src/styles/keditor/_toolbar.less
+++ b/src/styles/keditor/_toolbar.less
@@ -21,6 +21,7 @@
         text-align: center;
         line-height: @toolbar-item-size;
         transition: all @animation-duration;
+        margin-top: 18px;
         
         .fa {
             line-height: inherit;
