--- a/src/styles/_variables.less
+++ b/src/styles/_variables.less
@@ -3,11 +3,11 @@
 @blue                                       : #2eb2e4;
 @blueLight                                  : #b5e4f6;
 @blueLighter                                : #dfeaf1;
-@black                                      : #1b1d27;
+@black                                      : #000000;
 
 // Common colors
 @border-color                               : #ddd;
-@ui-color                                   : #333;
+@ui-color                                   : rgb(0, 0, 0);
 
 // Border radius
 // -------------------------------------------------
@@ -39,12 +39,12 @@
 @btn-font-size                              : 12px;
 @btn-box-shadow                             : 1px 1px 2px rgba(0, 0, 0, 0.2);
 @btn-padding                                : 0 10px;
-@btn-default-color                          : #333;
+@btn-default-color                          : rgb(0, 0, 0);
 @btn-default-bg                             : #fff;
 @btn-default-border                         : #ddd;
 @btn-primary-color                          : #fff;
-@btn-primary-bg                             : #333;
-@btn-primary-border                         : #333;
+@btn-primary-bg                             : rgb(0, 0, 0);
+@btn-primary-border                         : rgb(0, 0, 0);
 
 // Modal
 // -------------------------------------------------
