more button changes

--- a/src/styles/_variables.less
+++ b/src/styles/_variables.less
@@ -19,8 +19,8 @@
 
 // Closer
 // -------------------------------------------------
-@closer-color                               : #ccc;
-@closer-hover-color                         : #aaa;
+@closer-color                               : #FFCE80;
+@closer-hover-color                         : #c29c5f;
 
 // Wrapper
 // -------------------------------------------------
@@ -40,7 +40,7 @@
 @btn-box-shadow                             : 1px 1px 2px rgba(0, 0, 0, 0.2);
 @btn-padding                                : 0 10px;
 @btn-default-color                          : rgb(0, 0, 0);
-@btn-default-bg                             : #fff;
+@btn-default-bg                             : #FFCE80;
 @btn-default-border                         : #ddd;
 @btn-primary-color                          : #fff;
 @btn-primary-bg                             : rgb(0, 0, 0);
@@ -63,8 +63,8 @@
 @modal-footer-btn-height                    : 30px;
 
 // Modal closer
-@modal-closer-size                          : 32px;
-@modal-closer-font-size                     : 20px;
+@modal-closer-size                          : 55px;
+@modal-closer-font-size                     : 50px;
 
 // Modal input
 @modal-input-bg                             : #eee;
