--- a/src/styles/keditor/_button.less
+++ b/src/styles/keditor/_button.less
@@ -31,7 +31,7 @@
     line-height: unit(@btn-height - 1, px);
     font-size: 30px;
     padding-top: 14px;
-    padding-bottom: 32px;
+    padding-bottom: 34px;
     padding-left: 60px;
     padding-right: 60px;
     border-radius: 12px;
@@ -47,6 +47,7 @@
         border: 1px solid @btn-default-border;
         background: @btn-default-bg;
         color: @btn-default-color;
+        border-radius: 25px;
         
         &:hover {
             background: darken(@btn-default-bg, 5%);
