--- a/src/styles/keditor/_modal.less
+++ b/src/styles/keditor/_modal.less
@@ -88,6 +88,7 @@
         line-height: @modal-closer-size;
         padding: 0;
         font-weight: bold;
+        margin-bottom: 6px;
         
         &:hover {
             color: @closer-hover-color;
