--- a/src/styles/keditor/_toolbar.less
+++ b/src/styles/keditor/_toolbar.less
@@ -21,7 +21,8 @@
         text-align: center;
         line-height: @toolbar-item-size;
         transition: all @animation-duration;
-        margin-top: 18px;
+        margin-top: 8px;
+        margin-bottom: 8px;
         
         .fa {
             line-height: inherit;
@@ -43,6 +44,7 @@
     transform: translateX(-50%);
     background-color: @component-toolbar-bg;
     border-radius: @border-radius @border-radius 0 0 !important;
+    margin-top: 30px;
     
     > a {
         line-height: unit(@toolbar-item-size + 1, px);
