More design changes

--- a/src/styles/keditor/_modal.less
+++ b/src/styles/keditor/_modal.less
@@ -58,7 +58,7 @@
 
 .keditor-modal-header {
     .clearfix();
-    background: @modal-bg;
+    background: #000;
     border-bottom: 1px solid @border-color;
     padding: @modal-header-padding;
     z-index: 2;
