--- a/src/styles/keditor/_snippet.less
+++ b/src/styles/keditor/_snippet.less
@@ -32,6 +32,7 @@
     margin: @snippet-margin;
     flex: none;
     border-color: black;
+    border-radius: 20px;
     
     .keditor-snippet-inner {
         display: block;
