--- a/src/styles/_variables.less
+++ b/src/styles/_variables.less
@@ -54,7 +54,7 @@
 // Modal header
 @modal-header-height                        : 56px;
 @modal-header-padding                       : 0 15px;
-@modal-header-title-color                   : rgb(0, 0, 0);
+@modal-header-title-color                   : #FFCE80;
 @modal-header-title-font-size               : 18px;
 
 // Modal footer
