--- a/src/styles/keditor/_button.less
+++ b/src/styles/keditor/_button.less
@@ -61,7 +61,7 @@
     }
     
     &.keditor-btn-primary {
-        border: 1px solid @btn-primary-border;
+        border: 2px dotted @btn-primary-border;
         background: @btn-primary-bg;
         color: @btn-primary-color;
         
