--- a/src/styles/keditor/_button.less
+++ b/src/styles/keditor/_button.less
@@ -44,7 +44,7 @@
     }
     
     &.keditor-btn-default {
-        border: 1px solid @btn-default-border;
+        border: 3px dotted @btn-default-border;
         background: @btn-default-bg;
         color: @btn-default-color;
         border-radius: 25px;
