--- a/src/styles/keditor/_button.less
+++ b/src/styles/keditor/_button.less
@@ -31,7 +31,7 @@
     line-height: unit(@btn-height - 1, px);
     font-size: 30px;
     padding-top: 14px;
-    padding-bottom: 34px;
+    padding-bottom: 32px;
     padding-left: 70px;
     padding-right: 70px;
     border-radius: 12px;
@@ -44,7 +44,7 @@
     }
     
     &.keditor-btn-default {
-        border: 3px dashed @btn-default-border;
+        border: 3px dotted @btn-default-border;
         background: @btn-default-bg;
         color: @btn-default-color;
         border-radius: 25px;
