--- a/src/styles/keditor/_button.less
+++ b/src/styles/keditor/_button.less
@@ -30,11 +30,11 @@
     height: @btn-height;
     line-height: unit(@btn-height - 1, px);
     font-size: 30px;
-    padding-top: 14px;
-    padding-bottom: 32px;
-    padding-left: 70px;
-    padding-right: 70px;
-    border-radius: 12px;
+    padding-top: 1.4rem;
+    padding-bottom: 3.2rem;
+    padding-left: 80px;
+    padding-right: 80px;
+    border-radius: 18px;
     box-shadow: @btn-box-shadow;
     display: inline-block;
     text-decoration: none !important;
