--- a/src/styles/_variables.less
+++ b/src/styles/_variables.less
@@ -31,13 +31,13 @@
 
 // Iframe
 // -------------------------------------------------
-@iframe-wrapper-shadow                      : 0 0 35px rgba(0, 0, 0, .07);
+@iframe-wrapper-shadow                      : 0 0 28px #fcd28f2a;
 
 // Button
 // -------------------------------------------------
 @btn-height                                 : 23px;
 @btn-font-size                              : 12px;
-@btn-box-shadow                             : 2px 6px 16px rgba(0, 0, 0, 0.13);
+@btn-box-shadow                             : 1px 3px 16px #00000044;
 @btn-padding                                : 0 10px;
 @btn-default-color                          : rgb(0, 0, 0);
 @btn-default-bg                             : #FFCE80;
