--- a/src/styles/keditor/_iframe.less
+++ b/src/styles/keditor/_iframe.less
@@ -7,8 +7,10 @@
 // Iframe
 // -------------------------------------------------
 .keditor-iframe-wrapper {
-    overflow: auto;
+    overflow: visible;
     height: 100%;
+    width: 90%;
+    margin-left: 22px;
 }
 
 .keditor-iframe-width-switcher {
