--- a/src/styles/keditor/_button.less
+++ b/src/styles/keditor/_button.less
@@ -47,6 +47,7 @@
         background: @btn-default-bg;
         color: @btn-default-color;
         border-radius: 26px;
+        display: inline-block;
         
         &:hover {
             background: darken(@btn-default-bg, 5%);
@@ -63,6 +64,7 @@
         border: 2px dotted @btn-primary-border;
         background: @btn-primary-bg;
         color: @btn-primary-color;
+        display: inline-block;
         
         &:hover {
             background: darken(@btn-primary-bg, 5%);
