--- a/src/styles/keditor/_button.less
+++ b/src/styles/keditor/_button.less
@@ -37,6 +37,7 @@
     box-shadow: @btn-box-shadow;
     display: inline-block;
     text-decoration: none !important;
+    border-radius: 26px;
     
     i {
         line-height: unit(@btn-height - 1, px);
