--- a/src/styles/keditor/_iframe.less
+++ b/src/styles/keditor/_iframe.less
@@ -29,7 +29,8 @@
 
 .keditor-iframe-body {
     .keditor-scrollbar();
-    background-color: rgb(46, 46, 46);
+    background: rgb(0,12,219);
+    background: linear-gradient(90deg, rgb(46, 0, 212) 55%, rgb(206, 30, 59) 99%);
 }
 
 
