--- a/src/styles/keditor/_iframe.less
+++ b/src/styles/keditor/_iframe.less
@@ -29,8 +29,7 @@
 
 .keditor-iframe-body {
     .keditor-scrollbar();
-    background: rgb(0,12,219);
-    background: linear-gradient(90deg, rgb(46, 0, 212) 55%, rgb(206, 30, 59) 99%);
+    background: rgb(14, 14, 14);
 }
 
 
